src/test/ui/suggestions/dont-suggest-dereference-on-arg.stderr
error[E0658]: non-reference pattern used to match a reference (see issue #42640)
  --> $DIR/dont-suggest-dereference-on-arg.rs:16:18
   |
16 |         .filter(|&(ref a, _)| foo(a))
   |                  ^^^^^^^^^^^ help: consider using a reference: `&&(ref a, _)`
   |
   = help: add #![feature(match_default_bindings)] to the crate attributes to enable

error: aborting due to previous error

